--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "note-it",
   "version": "0.1.0",
-  "homepage": "https://CodeSShuv.github.io/Note-It",
+  "homepage": "https://CodeSShuv.github.io/note-it",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
@@ -15,8 +15,7 @@
   },
   "scripts": {
     "predeploy": "npm run build",
-  
-   "deploy": "gh-pages -d build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
