--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "note-it",
   "version": "0.1.0",
-  "homepage": "https://CodeSShuv.github.io/note-it",
+  "homepage": "https://codesshuv.github.io/note-it",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
@@ -40,7 +40,7 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^6.0.0"
+    "gh-pages": "^6.1.1"
   },
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
   "main": "index.js",
